n8n/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  labels:
    app.kubernetes.io/version: v1
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
        app.kubernetes.io/version: v1
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:stable
          ports:
            - containerPort: 5678
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-storage
      volumes:
        - name: n8n-storage
          persistentVolumeClaim:
            claimName: n8n-pvc
